--- a/BlazorProject.Client/Shared/MainLayout.razor
+++ b/BlazorProject.Client/Shared/MainLayout.razor
@@ -1,6 +1,6 @@
 ﻿@inherits LayoutComponentBase
 @inject IUriHelper UriHelper
-<div class="container-fluid">
+<div>
     <div class="row">
         <div class="col">
             <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
@@ -18,14 +18,14 @@
             </nav>
         </div>
     </div>
-    <div class="row mt-3 mb-3">
+    @*<div class="row mt-3 mb-3">
         @for (var genNumber = 1; genNumber <= NumberOfGenerations; genNumber++)
         {
             <div class="col">
                 <GenerationDropdown GenNumber="@genNumber" />
             </div>
         }
-    </div>
+    </div>*@
     <div class="row">
         <div class="col">
             @Body
